--- a/docker/Dockerfile-Slim
+++ b/docker/Dockerfile-Slim
@@ -1,5 +1,3 @@
-
-FROM openjdk:11.0.3-slim
-#EXPOSE  8443
-ADD /target/starwars-1.0.1.jar server.jar
-CMD ["/bin/sh","-c","java -Dlight-4j-config-dir=/config -Dlogback.configurationFile=/config/logback.xml -jar /server.jar"]
+FROM amazoncorretto:21.0.5
+COPY /target/graphql-petstore.jar server.jar
+CMD ["/bin/sh","-c","exec java -Dlight-4j-config-dir=/config -Dlogback.configurationFile=/config/logback.xml -jar /server.jar"]
